; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_tmpfile-util-label.c_fopen_temporary_label.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_tmpfile-util-label.c_fopen_temporary_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@S_IFREG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fopen_temporary_label(i8* %0, i8* %1, i32** %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i8**, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32** %2, i32*** %8, align 8
  store i8** %3, i8*** %9, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* @S_IFREG, align 4
  %13 = call i32 @mac_selinux_create_file_prepare(i8* %11, i32 %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %5, align 4
  br label %25

18:                                               ; preds = %4
  %19 = load i8*, i8** %7, align 8
  %20 = load i32**, i32*** %8, align 8
  %21 = load i8**, i8*** %9, align 8
  %22 = call i32 @fopen_temporary(i8* %19, i32** %20, i8** %21)
  store i32 %22, i32* %10, align 4
  %23 = call i32 (...) @mac_selinux_create_file_clear()
  %24 = load i32, i32* %10, align 4
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %18, %16
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @mac_selinux_create_file_prepare(i8*, i32) #1

declare dso_local i32 @fopen_temporary(i8*, i32**, i8**) #1

declare dso_local i32 @mac_selinux_create_file_clear(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
